refactoring of the html and css for the stream search. instead of 3 different non overlapping html divs for each view there is a common one with components added or removed. the css is also simplified as will be the js. the memes are not handled yet and there is an issue in that the images shown are in reverse order

--- a/AppCode/taga-CSS/stream-search-CSS/stream-search-main-ui.css
+++ b/AppCode/taga-CSS/stream-search-CSS/stream-search-main-ui.css
@@ -1,3 +1,5 @@
+/* -------------------- */
+/* SELECTION VIEW */
 #top-div {
   background-color: var(--bg);
   height: 100vh;
@@ -13,110 +15,52 @@
 }
 
 .form-label {
-  font-size: 1.25rem; /* Adjust as needed */
+  font-size: clamp(0.75rem, 3.5vmin, 4rem);
 }
 
-#search-type-label,
-#source-label,
-#accuracy-label {
-  font-size: 4vmin;
-  font-weight: bold;
-}
-
-#search-type,
-#source-type,
-#accuracy-description {
-  font-size: 3.2vmin;
-}
-#source-type {
-  max-width: 60%;
-}
 #continue-btn,
 #main-menu-btn,
-#screen-capture-btn {
-  font-size: 3.5vmin;
-  margin-top: 5px;
-  padding: 6px;
-}
-#stream-type-description {
+#stream-type-description,
+#search-type,
+#source-type {
   font-size: 3vmin;
-  margin-top: 7px;
 }
 
-/*START: CSS for the first stream selection view1 */
-#stream-view1 {
+/* ------------------------- */
+/* STREAM VIEW */
+#stream-view {
   display: grid;
-  grid-template-columns: 1fr 7fr;
   grid-template-rows: 1fr 14fr;
   min-height: 0;
   min-width: 0;
   height: 100vh;
   width: 100vw;
   box-sizing: border-box;
+}
+
+.grid-keywords {
+  grid-template-columns: 3fr 15fr;
   grid-template-areas:
-    'stream-btns-div1 stream-btns-div1'
-    'keyword-display1-div stream-view1-video';
-}
-#stream-btns-div1 {
-  grid-area: stream-btns-div1;
-  display: flex;
-  justify-content: center;
-  border-bottom: 4px solid var(--primary);
-  background-color: aqua;
+    'stream-btns-div stream-btns-div'
+    'keyword-display-div stream-view-video';
 }
 
-#keyword-display1-div {
-  grid-area: keyword-display1-div;
-  height: 100%;
-  width: 100%;
-  font-size: 3vmin;
-  overflow-y: auto;
-  overflow-x: hidden;
-  word-break: break-all;
-  hyphens: auto;
-  background-color: red;
-}
-#stream-view1-video {
-  grid-area: stream-view1-video;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-  background-color: green;
-}
-
-#overlay1 {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
-/*START: CSS for the first stream selection view2 which includes keywords and images */
-#stream-view2 {
-  display: grid;
-  grid-template-columns: 2fr 13fr 3fr;
-  grid-template-rows: 1fr 14fr;
-  min-height: 0;
-  min-width: 0;
-  height: 100vh;
-  width: 100vw;
-  box-sizing: border-box;
+.grid-keywords-images {
+  grid-template-columns: 3fr 13fr 3fr;
   grid-template-areas:
-    'stream-btns-div2 stream-btns-div2 stream-btns-div2'
-    'keyword-display2-div stream-view2-video images-display2-div';
+    'stream-btns-div stream-btns-div stream-btns-div'
+    'keyword-display-div stream-view-video images-display-div';
 }
-#stream-btns-div2 {
-  grid-area: stream-btns-div2;
+
+#stream-btns-div {
+  grid-area: stream-btns-div;
   display: flex;
   justify-content: center;
   border-bottom: 4px solid var(--primary);
 }
-#return-stream-btn2 {
-  height: 100%;
-  font-size: 3.5vmin;
-}
 
-#keyword-display2-div {
-  grid-area: keyword-display2-div;
+#keyword-display-div {
+  grid-area: keyword-display-div;
   height: 100%;
   width: 100%;
   font-size: 3vmin;
@@ -125,18 +69,25 @@
   word-break: break-all;
   hyphens: auto;
 }
-#stream-view2-video {
-  grid-area: stream-view2-video;
+
+#stream-view-video {
+  grid-area: stream-view-video;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
+  /* overflow: overlay; */
 }
-#images-display2-div {
+
+#images-display-div {
+  grid-area: images-display-div;
   overflow-y: auto;
   overflow-x: hidden;
   border-left: 3px solid var(--primary);
+  display: none;
 }
-#overlay2 {
+
+#overlay {
   display: block;
   width: 100%;
   height: 100%;
@@ -164,10 +115,7 @@
   justify-content: center;
   border-bottom: 4px solid var(--primary);
 }
-#return-stream-btn3 {
-  height: 100%;
-  font-size: 3.5vmin;
-}
+
 #keyword-display3-div {
   grid-area: keyword-display3-div;
   height: 100%;
@@ -184,24 +132,11 @@
   height: 100%;
   box-sizing: border-box;
 }
-#images-display3-div {
-  overflow-y: auto;
-  overflow-x: hidden;
-  border-left: 3px solid var(--primary);
-}
+
 #memes-display3-div {
   overflow-y: auto;
   overflow-x: hidden;
   border-left: 3px solid var(--primary);
-}
-#overlay3 {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
-.canvas-wrapper {
-  overflow: overlay;
 }
 
 .top-btns {
